# sshcb

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-win.sh  flake.nix  shell.nix
cli/: CMakeLists.txt  cli_utils.c  cli_utils.h
common/: .protocol.h.swp  CMakeLists.txt  protocol.h  socket.c  socket.h
core/: CMakeLists.txt  config.c  config.h  context_utils.c  context_utils.h  logging.c  logging.h
core/OS/: threads.h
core/ssh/: .data.h.swp  .session.c.swp  auth.c  auth.h  channel.c  channel.h  config.h  data.h  key_utils.c  key_utils.h  session.c  session.h
daemon/: CMakeLists.txt  daemon_utils.c  daemon_utils.h  daemon_wrapper.c  daemon_wrapper.h
help/: vim-implementation.md
main/: CMakeLists.txt  main.c
src/: connection.c  connection.h  main.c
src/OS/: socket_utils.h
src/core/OS/: socket_utils.c  socket_utils.h
src/core/ssh/: auth.c  key_utils.c  key_utils.h
src/main/: main.c
src/ssh/: auth.c  auth.h  channel.c  channel.h  data.h  session.c  session.h
src/test/: test.c  test.h
test/: .test.c.swp  CMakeLists.txt  client.c  server.c  test.c  test.h
